--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             position: relative;
         }
 
-        /* --- NỀN VŨ TRỤ SAO RƠI --- */
+        /* --- NỀN VŨ TRỤ SAO --- */
         .stars-container {
             position: absolute;
             top: 0; left: 0; width: 100%; height: 100%;
@@ -38,7 +38,7 @@
             to { transform: translateY(-2000px); }
         }
 
-        /* --- NHẠC NỀN --- */
+        /* --- Ô THÔNG TIN NHẠC --- */
         #music-info {
             position: absolute; top: 30px; left: 50%; transform: translateX(-50%);
             border: 1px solid rgba(255, 255, 255, 0.3); padding: 8px 15px; border-radius: 4px;
@@ -46,6 +46,8 @@
             text-transform: uppercase; z-index: 5; width: 250px; text-align: center;
             overflow: hidden; white-space: nowrap;
         }
+        #music-info span { display: inline-block; padding-left: 100%; animation: marquee 10s linear infinite; }
+        @keyframes marquee { 0% { transform: translateX(0); } 100% { transform: translateX(-100%); } }
 
         /* --- CAROUSEL THƯ MỤC --- */
         .carousel-container { display: flex; align-items: center; gap: 60px; z-index: 10; }
@@ -64,71 +66,40 @@
         /* --- MÀN HÌNH BẮT ĐẦU --- */
         #start-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #000; display: flex; flex-direction: column; justify-content: center; align-items: center; z-index: 200; cursor: pointer; }
 
-        /* --- XOAY MÀN HÌNH --- */
+        /* --- XOAY MÀN HÌNH ĐIỆN THOẠI --- */
         #landscape-warning { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #000; color: #fff; z-index: 9999; flex-direction: column; align-items: center; justify-content: center; text-align: center; }
         @media screen and (max-width: 850px) and (orientation: portrait) { #landscape-warning { display: flex; } }
 
-        /* --- HỆ THỐNG CHAT TỰ ĐỘNG (THEO YÊU CẦU) --- */
+        /* --- HỆ THỐNG CHAT TỰ ĐỘNG --- */
         #chat-container {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            align-items: flex-end;
-            z-index: 9999;
-            pointer-events: none;
+            position: fixed; bottom: 20px; right: 20px;
+            display: flex; flex-direction: column; gap: 10px; align-items: flex-end;
+            z-index: 9999; pointer-events: none;
         }
-
         .chat-msg {
-            background-color: #ffffff;
-            color: #000000;
-            padding: 12px 18px;
-            border-radius: 18px;
-            border-bottom-right-radius: 2px;
-            max-width: 300px;
-            font-size: 14px;
-            font-weight: 500;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.3);
-            pointer-events: auto;
-            /* Hiệu ứng bay từ dưới giữa màn hình lên góc phải sát viền */
+            background-color: #ffffff; color: #000000; padding: 12px 18px;
+            border-radius: 18px; border-bottom-right-radius: 2px;
+            max-width: 300px; font-size: 14px; font-weight: 500;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.3); pointer-events: auto;
             animation: flyInChat 1.5s cubic-bezier(0.175, 0.885, 0.32, 1.1) forwards;
             opacity: 0;
         }
-
         @keyframes flyInChat {
-            0% {
-                transform: translate(-45vw, 200px) scale(0.5);
-                opacity: 0;
-            }
-            100% {
-                transform: translate(0, 0) scale(1);
-                opacity: 1;
-            }
+            0% { transform: translate(-45vw, 200px) scale(0.5); opacity: 0; }
+            100% { transform: translate(0, 0) scale(1); opacity: 1; }
         }
-
-        .fade-out {
-            animation: fadeAway 5s forwards;
-        }
-
+        .fade-out { animation: fadeAway 5s forwards; }
         @keyframes fadeAway {
             from { opacity: 1; transform: scale(1); }
             to { opacity: 0; transform: scale(0.9) translateY(-10px); }
         }
-
-        /* Animations Slide Folder */
-        .slide-out-left { animation: slideOutLeft 0.5s forwards; }
-        .slide-in-right { animation: slideInRight 0.5s forwards; }
-        @keyframes slideOutLeft { to { transform: translateX(-150%); opacity: 0; } }
-        @keyframes slideInRight { from { transform: translateX(150%); opacity: 0; } to { transform: translateX(0); opacity: 1; } }
     </style>
 </head>
 <body>
 
     <div id="landscape-warning">
         <h2 style="font-weight: 300;">Vui lòng xoay ngang điện thoại</h2>
-        <p style="opacity: 0.6;">Để có trải nghiệm tốt nhất dành cho bé yêu ❤️</p>
+        <p style="opacity: 0.6;">HEHE CHUẨN BỊ CHƯA BÉ NHƯ:33 ĐỈNH LẮM Á NHA</p>
     </div>
 
     <div id="chat-container"></div>
@@ -137,11 +108,11 @@
 
     <div id="start-overlay" onclick="startSite()">
         <h1 style="font-weight: 100; letter-spacing: 10px;">ENTER</h1>
-        <p style="font-size: 12px; opacity: 0.5;">Khởi hành vào không gian của bé Như</p>
+        <p style="font-size: 12px; opacity: 0.5;">Khởi hành vào không gian</p>
     </div>
 
     <div id="music-info">Đang tải nhạc...</div>
-    <audio id="music-player" loop></audio>
+    <audio id="music-player" onended="nextTrack()"></audio>
 
     <div class="carousel-container">
         <button class="arrow-btn" onclick="moveFolder(-1)">&#8249;</button> 
@@ -163,18 +134,21 @@
     </div>
 
     <script>
-        // --- 1. CẤU HÌNH NHẠC & NỘI DUNG ---
+        // --- 1. DANH SÁCH NHẠC CỦA BẠN (TỰ CHỈNH TÊN FILE TẠI ĐÂY) ---
         const playlist = [
-            { name: "Beautiful in White", url: "https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" } // Thay bằng link nhạc của bạn
+            { name: "Text 07", url: "nhac1.mp3" },
+            { name: "ID3107 W/n", url: "nhac2.mp3" },
+            { name: "Still With You(vẫn bên em:<)", url: "nhac3.mp3" }
         ];
 
+        // --- 2. NỘI DUNG CÁC THƯ MỤC ---
         const contents = {
-            1: `<h3>Anh và em</h3><p>Chào em bé của anh, hiện tại đang là ngày 20/02/2026...</p><p>Trang web này anh viết riêng cho em, để em thấy tình yêu của anh luôn hiện hữu ở đây.</p>`,
-            2: `<h3>Mục số 02</h3><p>Nơi lưu giữ những kỷ niệm bí mật của chúng mình.</p>`,
-            3: `<h3>Mục số 03</h3><p>Anh yêu em nhiều lắm!</p>`
+            1: `<h3>Anh và em</h3><p>Anh làm trang web này là để nói cho bé biết về tình yêu của anh dành cho em , hiện tại đang là ngày 20/02/2026...</p><p>(Nội dung của bạn tiếp tục tại đây...)</p>`,
+            2: `<h3>Mục số 02</h3><p>Nội dung thư mục 2 của bạn.</p>`,
+            3: `<h3>Mục số 03</h3><p>Nội dung thư mục 3 của bạn.</p>`
         };
 
-        // --- 2. KỊCH BẢN CHAT TỰ ĐỘNG ---
+        // --- 3. KỊCH BẢN CHAT (CHẠY NGẦM SAU KHI MỞ MỤC) ---
         const chatScripts = {
             1: [
                 { delay: 60000, text: "Thấy web anh làm hay hem kk" }, 
@@ -183,15 +157,17 @@
                 { delay: 83000, text: "yêu yêu hehe" }
             ],
             2: [
-                { delay: 5000, text: "Em đang xem mục 2 đó hả?" } // Code sẵn cho bạn tự viết sau này
+                { delay: 5000, text: "Bạn đang xem mục 2 đúng không?" }
             ]
         };
 
-        // --- 3. LOGIC XỬ LÝ ---
+        // --- 4. LOGIC HỆ THỐNG ---
         let currentIndex = 1;
-        const totalFolders = 3;
+        let currentTrackIndex = 0;
+        const totalFolders = 10; // Bạn có thể chỉnh số lượng thư mục tùy ý
         const player = document.getElementById('music-player');
-        let triggeredFolders = {}; // Đảm bảo chat chỉ chạy 1 lần khi nhấn vào mục đó
+        const musicInfo = document.getElementById('music-info');
+        let triggeredFolders = {}; 
 
         function moveFolder(direction) {
             currentIndex += direction;
@@ -199,19 +175,18 @@
             if (currentIndex < 1) currentIndex = totalFolders;
             document.getElementById('folder-name').innerText = currentIndex < 10 ? "0" + currentIndex : currentIndex;
             
-            // Hiệu ứng lướt nhẹ
             const display = document.getElementById('folder-display');
-            display.style.opacity = '0';
+            display.style.opacity = '0.5';
             setTimeout(() => { display.style.opacity = '1'; }, 200);
         }
 
         function openFolder() {
-            const content = contents[currentIndex] || "Nội dung đang cập nhật...";
+            const content = contents[currentIndex] || "Chưa có nội dung cho thư mục này.";
             document.getElementById('modal-title').innerText = "THƯ MỤC " + (currentIndex < 10 ? "0"+currentIndex : currentIndex);
             document.getElementById('modal-body').innerHTML = content;
             document.getElementById('content-modal').style.display = 'flex';
 
-            // KÍCH HOẠT CHAT CHẠY NGẦM (Nếu chưa từng kích hoạt mục này)
+            // KÍCH HOẠT CHAT CHẠY NGẦM (Chỉ chạy 1 lần duy nhất cho mỗi mục)
             if (!triggeredFolders[currentIndex]) {
                 startChatSequence(currentIndex);
                 triggeredFolders[currentIndex] = true;
@@ -249,13 +224,9 @@
 
         function startSite() {
             document.getElementById('start-overlay').style.display = 'none';
-            
-            // Chơi nhạc
-            player.src = playlist[0].url;
-            document.getElementById('music-info').innerText = "Playing: " + playlist[0].name;
-            player.play();
+            playTrack(0);
 
-            // Fullscreen & Lock Landscape (Dành cho điện thoại)
+            // Fullscreen & Khóa xoay ngang cho điện thoại
             try {
                 const doc = document.documentElement;
                 if (doc.requestFullscreen) doc.requestFullscreen();
@@ -263,6 +234,19 @@
                     screen.orientation.lock('landscape').catch(() => {});
                 }
             } catch (err) {}
+        }
+
+        function playTrack(index) {
+            if (index >= playlist.length) index = 0;
+            currentTrackIndex = index;
+            player.src = playlist[index].url;
+            musicInfo.innerHTML = "<span>Now Playing: " + playlist[index].name + "</span>";
+            player.play().catch(e => console.log("Lỗi chơi nhạc: ", e));
+        }
+
+        function nextTrack() {
+            currentTrackIndex++;
+            playTrack(currentTrackIndex);
         }
     </script>
 </body>
