--- a/index.html
+++ b/index.html
@@ -143,7 +143,29 @@
 
         // --- 2. NỘI DUNG CÁC THƯ MỤC ---
         const contents = {
-            1: `<h3>Anh và em</h3><p>Anh làm trang web này là để nói cho bé biết về tình yêu của anh dành cho em , hiện tại đang là ngày 20/02/2026...</p><p>(Nội dung của bạn tiếp tục tại đây...)</p>`,
+            1: `<h3>Anh và em </h3>p>Anh làm trang web
+này là để nói cho bé biết về tình yêu của anh dành
+cho em , hiện tai đang là ngày 20/02/2026</p>
+<p>Mình cũng đã bên nhau hơn 1 năm rồi á baby,thật
+là một khoảng thời gian dài ha, trang web này anh
+dựng lên là để em bé biết rằng:3 a yêu baby rất
+nhiều,aluôn dùng hết những gìa biết a có à a làm
+được đế cho e:33
+moa moa.anh nghĩ anh sẽ cho bé xem trang web này
+vào ngày sinh nhật của bé nè hoặc 1 dịp gì đó đặc
+biệt, chắclúc e đọc được e bé cũng biết rồi ha hihi,thì
+mục số 1 nà á chỉ là đế anh nói về
+lý do a làm trang web và cách a làm nó:33.Về lý do
+thìanh cảm thấy sẽ rất là ngầu và lãng mạn khi đưa
+tình yêu của anh vào một trang web chỉ có 1 người vô
+được và đọc được và đó là em hehe, còn về cách mà
+anh làm được trang web này thì a nhờ a.i viết code
+theo ý cua a và anh học 1 ít code để tự sửa không
+cần a.i:33 hehe nói chung là a làm cũng nhiều lắm
+nhoooo.Anh mong bé sẽ nhận được tình yêu này ca
+a và giữ nó trong lòng:33, tiếp tuc đọc những mục
+tiếp theo nhe bé yêu:3</p>
+<p>Anh yêu bé Như</p>`,
             2: `<h3>Mục số 02</h3><p>Nội dung thư mục 2 của bạn.</p>`,
             3: `<h3>Mục số 03</h3><p>Nội dung thư mục 3 của bạn.</p>`
         };
@@ -251,3 +273,4 @@
     </script>
 </body>
 </html>
+
