--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
         // --- 2. NỘI DUNG CÁC THƯ MỤC ---
         const contents = {
-            1: `<h3>Anh và em </h3>p>Anh làm trang web
+            1: `<h3>Anh và em </h3>Anh làm trang web
 này là để nói cho bé biết về tình yêu của anh dành
 cho em , hiện tai đang là ngày 20/02/2026</p>
 <p>Mình cũng đã bên nhau hơn 1 năm rồi á baby,thật
@@ -273,4 +273,5 @@ tiếp theo nhe bé yêu:3</p>
     </script>
 </body>
 </html>
+
 
