--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="vi">
 <head>
@@ -149,37 +150,46 @@ cho em , hiện tai đang là ngày 20/02/2026</p>
 <p>Mình cũng đã bên nhau hơn 1 năm rồi á baby,thật
 là một khoảng thời gian dài ha, trang web này anh
 dựng lên là để em bé biết rằng:3 a yêu baby rất
-nhiều,aluôn dùng hết những gìa biết a có à a làm
+nhiều,a luôn dùng hết những gìa biết a có à a làm
 được đế cho e:33
 moa moa.anh nghĩ anh sẽ cho bé xem trang web này
 vào ngày sinh nhật của bé nè hoặc 1 dịp gì đó đặc
-biệt, chắclúc e đọc được e bé cũng biết rồi ha hihi,thì
-mục số 1 nà á chỉ là đế anh nói về
+biệt, chắc lúc e đọc được e bé cũng biết rồi ha hihi,thì
+mục số 1 này á chỉ là đế anh nói về
 lý do a làm trang web và cách a làm nó:33.Về lý do
-thìanh cảm thấy sẽ rất là ngầu và lãng mạn khi đưa
+thì anh cảm thấy sẽ rất là ngầu và lãng mạn khi đưa
 tình yêu của anh vào một trang web chỉ có 1 người vô
 được và đọc được và đó là em hehe, còn về cách mà
 anh làm được trang web này thì a nhờ a.i viết code
 theo ý cua a và anh học 1 ít code để tự sửa không
 cần a.i:33 hehe nói chung là a làm cũng nhiều lắm
 nhoooo.Anh mong bé sẽ nhận được tình yêu này ca
-a và giữ nó trong lòng:33, tiếp tuc đọc những mục
+a và giữ nó trong lòng:33, tiếp tục đọc những mục
 tiếp theo nhe bé yêu:3</p>
 <p>Anh yêu bé Như</p>`,
-            2: `<h3>Mục số 02</h3><p>Nội dung thư mục 2 của bạn.</p>`,
+            2: `<h3>Những kế hoạch của anh</h3><p>Em bé không biết chứ để a kể bé nghe về dự định làm quà sinh nhật cho em của anh, ban đầu á lúc mẹ anh chưa 
+phát hiện ra mình yêu nhau anh định là sẽ trang trí đầy cuốn sổ màu vàng con vịt đó luôn,gồm có 1 đống tranh nè a sẽ để hình bên dưới mục này he chứ tranh này a biết là 
+bé đã nhận được lúc sinh nhật òi hehe,tranh của a tặng bé gồm 3 tấm, rồi trong sổ đó a trang trí, a vẽ thêm a tạo 1 số mini game trong sổ thí dụ như là xé túi mù á:33
+cái trò xé túi mù là a thêm vô sau này a tranh thủ ba mẹ không có nhà để thêm vào hehe,rồi mấy cái hình dán nè , mấy cái móc khoá a treo đi kèm sổ bla bla hehe
+a tin là e bé đã rất thích:33,những món quà a làm tặng bé a đã bỏ rấtttt nhìu tình cảm luôn á và chất xám nữa :3 yêuuu lắm á trùi,chắc chắn đó là MÓN QUÀ SINH NHẬT TUYỆT 
+VỜI NHẤT BÉ TỪNG ĐƯỢC NHẬN hehe, hiện tại thì chưa nhưng a định chạy ra mấy cái trung tâm thương mại để mua tặng bé một cây son YSL khắc tên em bé , chắc a sẽ khắc
+vậy nè:"TRUC NHU N&N"hehe tên bé làm chính và N&N là tên 2 đứa viết tắc, a cũng để dành đủ xiền òi ,1tr mấy hehe nên lúc bé kêu mua nhẫn đôi a cũng hơi choáng vì a để dành
+mua son cho bé ò:3 hị hị,sang mục 3 đọc chủ đề khác nhe ở đây hết òi hihi.</p>`,
             3: `<h3>Mục số 03</h3><p>Nội dung thư mục 3 của bạn.</p>`
         };
 
         // --- 3. KỊCH BẢN CHAT (CHẠY NGẦM SAU KHI MỞ MỤC) ---
         const chatScripts = {
             1: [
-                { delay: 60000, text: "Thấy web anh làm hay hem kk" }, 
-                { delay: 70000, text: "kk đừng bất ngờ quá anh không đang chat trực tiếp với em đâu đây chỉ những câu a viết sẵn để hướng dẫn em và trông nom cô bé của anh hehe" },
-                { delay: 76000, text: "Đọc vui nha baby:33" },
-                { delay: 83000, text: "yêu yêu hehe" }
+                { delay: 40000, text: "Thấy web anh làm hay hem kk" }, 
+                { delay: 45000, text: "kk đừng bất ngờ quá anh không đang chat trực tiếp với em đâu đây chỉ những câu a viết sẵn để hướng dẫn em và trông nom cô bé của anh hehe" },
+                { delay: 60000, text: "Đọc vui nha baby:33,đọc xong qua mục 2 đọc nhe bé" },
+                { delay: 67000, text: "yêu yêu hehe" }
             ],
             2: [
-                { delay: 5000, text: "Bạn đang xem mục 2 đúng không?" }
+                { delay: 20000, text: "hihi,kế hoạch có thể dang dở chứ anh luôn cố gắng tặng bé điều nhất nè đừng lo:33" },
+                { delay: 35000, text: "Không biết em bé mở túi mù ra móc khoá gì đây ta" },
+                { delay: 39000, text: "Đối với anh không mắc âu đừng lo:33" }
             ]
         };
 
@@ -241,7 +251,7 @@ tiếp theo nhe bé yêu:3</p>
             setTimeout(() => {
                 bubble.classList.add('fade-out');
                 setTimeout(() => { bubble.remove(); }, 5000);
-            }, 50000);
+            }, 28000);
         }
 
         function startSite() {
